<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Who\'sUp</string>
    <string name="hello_world">Hello world!</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="signUp">Sign up</string>
    <string name="register_new_account">Register New Account</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="agree_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="password_does_not_match">Password does not match</string>
    <string name="please_insert_all_fields">Please insert all fields</string>
    <string name="account_successfully_created">Account Successfully Created</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="title_activity_forgot_login">Forgot your Password?</string>
    <string name="RetrievePassword">Retrieve Password</string>
    <string name="goBackLogin">Login</string>
    <string name="noInternetConnection">No Internet Connection</string>
    <string name="noConnection">Error! Bad Connection</string>
    <string name="title_activity_terms">Terms and Conditions</string>
    <string name="TermsAndConditions">Terms and Conditions</string>
    <string name="go_back">Go Back</string>
    <string name="termstext">1. Introduction  1.1 The Android Software Development Kit (referred to in this License Agreement as the \"SDK\" and specifically including the Android system files, packaged APIs, and Google APIs add-ons) is licensed to you subject to the terms of this License Agreement. This License Agreement forms a legally binding contract between you and Google in relation to your use of the SDK.  1.2 “Android” means the Android software stack for devices, as made available under the Android Open Source Project, which is located at the following URL: http://source.android.com/, as updated from time to time.  1.3 \"Google\" means Google Inc., a Delaware corporation with principal place of business at 1600 Amphitheatre Parkway, Mountain View, CA 94043, United States.</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="birthdate">Birthdate: </string>
    <string name="invalid_username">Username has invalid characters, only letters and numbers permitted</string>
    <string name="must_be_13_years_or_older">Must be 13 years or older</string>
    <string name="insert_date">Insert a valid date</string>
    <string name="you_must_accept_the_terms_and_conditions">You must accept the terms and conditions</string>
    <string name="title_activity_place_picker">Pick a place</string>
    <string name="title_activity_create_invite">Create a invite</string>
    <string name="openDrawer">Abrir Drawer</string>
    <string name="closeDrawer">Fechar Drawer</string>

    <!-- navigation drawer item labels  -->
    <string name="nav_item_all_invites">All Invites</string>
    <string name="nav_item_create_invite">Create Invite</string>
    <string name="nav_item_my_profile">My Profile</string>
    <string name="nav_item_my_invites">My Invites</string>
    <string name="nav_item_my_attendants">My Attendants</string>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_all_invites</item>
        <item>@string/nav_item_create_invite</item>
        <item>@string/nav_item_my_profile</item>
        <item>@string/nav_item_my_invites</item>
        <item>@string/nav_item_my_attendants</item>
    </string-array>

    <!-- NAV DRAWER ITEMS TITLE-->

    <string name="create_invite">Create Invite</string>
    <string name="view_profile">My Profile</string>
    <string name="my_invites">My Invites</string>
    <string name="my_attendees">My Attendees</string>

    <!-- CREATE INVITE STRINGS -->
    <string name="restaurant">Restaurant</string>
    <string name="select_a_category">Select a Category</string>
    <string name="meet_hour">Meet Hour:</string>
    <string name="meet_day">Meet Day:</string>
    <string name="select_a_subcategory">Select a Subcategory</string>
    <string name="enter_a_description_max_250_char">Enter a description (max 250 char)</string>
    <string name="meet_time">Meet Time:</string>
    <string name="invalid_date">Invalid Date</string>
    <string name="enter_place">Enter Place</string>

    <!-- GOOGLE PLACE AUTOCOMPLETE STRINGS -->
    <string name="autocomplete_hint">Enter place name or address</string>
    <string name="selected_place">Last Selected Place:</string>
    <string name="clear_text">Clear Text</string>

    <!-- getString(String, Object...) does not support HTML tags directly, they need to be encoded first.
    Original string: <b>%1$s</b><br/><i>Place Id: %2$s</i><br/>Address: %3$s<br/>Phone: %4$s<br/>Website: %5$s-->
    <string name="place_details">&lt;b&gt;%1$s&lt;/b&gt;&lt;br/&gt;&lt;i&gt;Place Id: %2$s&lt;/i&gt;&lt;br/&gt;Address: %3$s&lt;br/&gt;Phone: %4$s&lt;br/&gt;Website: %5$s</string>
    <string name="dd_mm_yy">dd-mm-yy</string>
    <string name="hh_mm">hh:mm</string>

    <!-- PLACE PICKER STRINGS-->
    <string name="place_picker_search_label">Search</string>
    <string name="place_picker_search_hint">Search place…</string>
    <string name="title_activity_recent_searches">Recent Searches</string>
    <string name="more_recent_history_text">MORE FROM RECENT HISTORY</string>
    <string name="pick_place">Pick a place</string>
    <string name="powered_by_google">Powered by Google</string>


    <!-- ACTION BAR MENU LABELS -->
    <string name="search_hint">Search for invites…</string>
    <string name="action_search">Search</string>
    <string name="action_refresh">Refresh invites</string>
    <string name="action_viewmap">View map</string>
    <string name="action_logout">Logout</string>
    <string name="action_exit">Exit</string>

    <!-- UPDATE PROFILE LABELS -->
    <string name="change_profile_avatar">Profile avatar:</string>
    <string name="change_custom_phrase">Custom phrase:</string>
    <string name="change_city">City:</string>
    <string name="change_country">Country:</string>
    <string name="change_password">Password:</string>
    <string name="change_password_old">Old password…</string>
    <string name="change_password_new">New password…</string>
    <string name="confirm_new_password">Confirm new password…</string>
    <string name="change_about_me">About me:</string>
    <string name="upload_image_gallery">Upload from gallery</string>

    <!-- MISCELLANEOUS -->
    <string name="title_activity_view_invite">View Invite</string>
    <string name="description">Description</string>
    <string name="attend">ATTEND</string>
    <string name="place">Place: </string>
    <string name="status">Status:</string>
    <string name="open">Open</string>
    <string name="closed">Closed</string>
    <string name="confirmed">Confirmed:</string>
    <string name="pending">Pending:</string>

    <string name="update_profile">Update Profile</string>
    <string name="close_invite">Close Invite</string>
    <string name="open_invite">Open Invite</string>
    <string name="confirm">CONFIRM</string>
    <string name="reject">REJECT</string>
    <string name="old_password_is_wrong">Old password is wrong</string>
    <string name="radius">Radius:</string>
    <string name="km">Km</string>
    <string name="filter">Filter</string>
    <string name="bar_cafe">Bar / Cafe</string>
    <string name="outdoor_sport">Outdoor / Sport</string>
    <string name="culture_art">Culture / Art</string>

    <!-- GCM STRINGS -->
    <string name="action_testgcm">Test GCM</string>
    <string name="password_must_be_at_least_6_characters_long">Password must be at least 6 characters long</string>
    <string name="password_too_long_maximum_length_is_30">Password too long. Maximum length is 30</string>
    <string name="invites_list">Invites list</string>
    <string name="all_invites">All Invites</string>

</resources>
