<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent" android:gravity="center_vertical|center_horizontal"
              android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin" tools:context=".LoginActivity"
              android:background="@drawable/header_gradient"
              android:descendantFocusability="beforeDescendants"
              android:focusableInTouchMode="true">
    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"

        >
        <ImageView android:src="@drawable/whosup_logo_small"
                   android:id="@+id/loginLogo"
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:adjustViewBounds="true"
                   android:scaleType="fitCenter"
                   android:layout_centerHorizontal="true"
                   android:layout_gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center_vertical|center_horizontal"
        >

                <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                              android:layout_height="match_parent" android:orientation="vertical"

                    >


                           <!--android:maxWidth="200dp"
                           android:maxHeight="200dp"-->

                    <EditText android:id="@+id/email" android:layout_width="match_parent"
                                          android:layout_height="wrap_content"
                                          android:hint="@string/email"
                                          android:inputType="textEmailAddress"
                                          android:maxLines="1"
                                          android:singleLine="true"
                                          android:layout_marginBottom="10dp"
                                          android:textColorHint="#ffffffff"
                                          android:textColor="#ffffffff" />

                    <EditText android:id="@+id/password" android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:hint="@string/password"
                              android:inputType="textPassword"
                              android:maxLines="1" android:singleLine="true"
                              android:layout_marginBottom="10dp"
                              android:textColorHint="#ffffffff"
                              android:textColor="#ffffffff" />

                    <Button android:id="@+id/login" style="?android:textAppearanceSmall"
                            android:layout_width="match_parent" android:layout_height="wrap_content"
                            android:layout_marginTop="16dp" android:text="@string/login"
                            android:textStyle="bold"
                            android:minHeight="45dp"
                            android:textColor="#ffffffff"
                            android:background="#ffd41310" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgotPassword"
                        android:id="@+id/passres"
                        android:textColor="#ffffffff"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:paddingTop="3dp"
                        android:paddingBottom="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="15dp"
                        android:textIsSelectable="false"/>

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="56dp"
                        android:id="@+id/loginErrorMsg"
                        android:textColor="#000000"
                        android:layout_alignParentLeft="true"/>
                </LinearLayout>
            </LinearLayout>


    <LinearLayout
        android:id="@+id/ll3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signUp"
            android:id="@+id/signUp"
            android:autoLink="web"
            android:textColor="#ffffffff"
            android:layout_gravity="bottom"
            android:textSize="18dp"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:textIsSelectable="false"/>
    </LinearLayout>
</LinearLayout>